--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "express-session": "^1.18.2",
     "mongoose": "^8.16.0",
     "multer": "^2.0.2",
+    "node-fetch": "^2.7.0",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
     "passport-local": "^1.0.0",
